Fix: All pages except light and dark mode.

--- a/ninjafood/assects/css/account-setting.css
+++ b/ninjafood/assects/css/account-setting.css
@@ -84,7 +84,7 @@
 }
 
 .bg-color{
-    width: 1249px;
+    width: 100%;
     height: 120px;
     top: 216px;
     left: 239px;
@@ -106,4 +106,18 @@
 }
 .size{
     font-size: 14px;
+}
+
+
+
+@media screen and (max-width: 769px) {
+    .bg-color {
+        margin-top: 20px;
+        margin-left: 40px;
+        height: fit-content;
+    }
+
+    .acc-setting {
+        overflow: hidden;
+    }
 }
