--- a/ninjafood/assects/css/dark-mode.css
+++ b/ninjafood/assects/css/dark-mode.css
@@ -9,6 +9,7 @@
 .email-section{
     width: 100%;
     height: 100vh;
+    overflow: hidden;
     background-image: url(../image/Sign\ Up\ Page.png);
     background-position: center;
     background-size: cover;
@@ -209,4 +210,25 @@ p{
     left: 940px;
     top: 450px;
     font-size: 50px;
+}
+
+
+@media screen and (max-width: 769px) {
+    .input {
+        margin-left: 0;
+        width: 100%;
+    }
+
+    .font-setting {
+        padding: 20px;
+    }
+
+    .dark-setting, .font-setting {
+        width: 100%;
+    }
+
+    .light-mode-image, .dark-mode-image {
+        width: 80%;
+    }
+
 }
