--- a/ninjafood/assects/css/help-setting.css
+++ b/ninjafood/assects/css/help-setting.css
@@ -113,3 +113,25 @@
 .text-area > p{
     padding-top: 10px;
 }
+
+
+@media screen and (max-width: 769px) {
+    .email-section {
+        overflow: hidden;
+    }
+
+    .main-section {
+        overflow-y: scroll;
+        padding-bottom: 100px;
+        width: 100%;
+        height: 100%;
+    }
+
+    .report-holder {
+        gap: 20px;
+    }
+
+    .text-area {
+        width: 100%;
+    }
+}
