--- a/ninjafood/assects/css/post.css
+++ b/ninjafood/assects/css/post.css
@@ -1,18 +1,19 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
- /* post-section */
 
- .post{
+/* post-section */
+
+.post {
     width: 100%;
     height: 100vh;
     background-color: #181818;
     padding-top: 20px;
- }
+}
 
- .header{
+.header {
     width: 95%;
     height: fit-content;
     margin-left: 30px;
@@ -21,7 +22,7 @@
     align-items: center;
 }
 
-.logo{
+.logo {
     width: 35px;
     height: 35px;
     background-image: url(../image/logo-2.png);
@@ -29,12 +30,12 @@
     background-size: cover;
 }
 
-.home{
+.home {
     display: flex;
     gap: 30px;
 }
 
-.logo-1{
+.logo-1 {
     width: 25px;
     height: 25px;
     background-image: url(../image/home.png);
@@ -44,7 +45,7 @@
     z-index: 10;
 }
 
-.logo-2{
+.logo-2 {
     width: 30px;
     height: 30px;
     background-image: url(../image/bell.png);
@@ -52,7 +53,7 @@
     background-size: cover;
 }
 
-.dot{
+.dot {
     width: 8px;
     height: 8px;
     border-radius: 50px;
@@ -63,7 +64,7 @@
     background-image: url(../image/Ellipse\ 5.png);
 }
 
-.logo-3{
+.logo-3 {
     width: 25px;
     height: 25px;
     background-image: url(../image/setting.png);
@@ -71,14 +72,14 @@
     background-size: cover;
 }
 
-.name{
+.name {
     display: flex;
     align-items: center;
     gap: 20px;
 }
 
 
-.name{
+.name {
     color: #FFF;
     font-family: Montserrat;
     font-size: 14px;
@@ -87,7 +88,7 @@
     line-height: normal;
 }
 
-.mat{
+.mat {
     color: #FFF;
     font-family: Montserrat;
     font-size: 14px;
@@ -96,7 +97,7 @@
     line-height: normal;
 }
 
-.circle{
+.circle {
     width: 50px;
     height: 50px;
     border-radius: 100px;
@@ -106,35 +107,35 @@
     background-color: #fff;
 }
 
-.scroll{
+.scroll {
     overflow-y: scroll;
 }
 
-.two{
+.two {
     width: 95%;
     height: 85vh;
     display: flex;
-    margin: auto; 
+    margin: auto;
     margin-top: 10px;
 }
 
-.post-view{
+.post-view {
     width: 50%;
     height: 85vh;
     overflow-y: scroll;
     border-right: 1px solid #454545;
 }
 
-.add-post{
+.add-post {
     width: 50%;
     height: 85vh;
 }
 
-.hold-post::-webkit-scrollbar{
+.hold-post::-webkit-scrollbar {
     display: none;
 }
 
-.profile-line{
+.profile-line {
     width: 100%;
     /* height: fit-content; */
     display: flex;
@@ -157,7 +158,7 @@
     margin-top: 20px;
 }
 
-.profile-line-1{
+.profile-line-1 {
     width: 100%;
     height: fit-content;
     display: flex;
@@ -166,17 +167,17 @@
     margin-top: 30px;
 }
 
-.circle-1{
+.circle-1 {
     width: 60px;
     height: 60px;
     border-radius: 100px;
     background-color: #FFF;
     background-image: url(../image/id2.png);
-    background-position:  center;
+    background-position: center;
     background-size: cover;
 }
 
-.person-name{
+.person-name {
     color: #FFF;
     font-family: Montserrat;
     font-size: 15px;
@@ -186,7 +187,7 @@
     letter-spacing: 2px;
 }
 
-.time{
+.time {
     color: #FFF;
     font-family: Montserrat;
     font-size: 10px;
@@ -197,7 +198,7 @@
     padding-top: 8px;
 }
 
-.Contribute{
+.Contribute {
     color: #FFF;
     font-family: Montserrat;
     font-size: 15px;
@@ -217,18 +218,19 @@
     cursor: pointer;
 }
 
-.comment{
+.comment {
     color: #FFF;
     font-family: Montserrat;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 150%; /* 30px */
+    line-height: 150%;
+    /* 30px */
     width: 90%;
     margin-top: 20px;
 }
 
-.post-image{
+.post-image {
     width: 90%;
     height: 40vh;
     margin-top: 20px;
@@ -239,17 +241,17 @@
     background-size: cover;
 }
 
-.circle-2{
+.circle-2 {
     width: 40px;
     height: 40px;
     border-radius: 100px;
     background-color: #FFF;
     background-image: url(../image/id3.png);
-    background-position:  center;
+    background-position: center;
     background-size: cover;
 }
 
-.post-image-1{
+.post-image-1 {
     width: 65%;
     height: 40vh;
     margin-left: 110px;
@@ -260,7 +262,7 @@
     background-size: cover;
 }
 
-.post-line{
+.post-line {
     width: 60%;
     height: 80vh;
     flex-shrink: 0;
@@ -276,7 +278,7 @@
     align-items: center;
 }
 
-.cross{
+.cross {
     width: 80px;
     height: 80px;
     border-radius: 100px;
@@ -285,7 +287,7 @@
     background-size: cover;
 }
 
-.click{
+.click {
     color: #FFF;
     font-family: Montserrat;
     font-size: 13px;
@@ -295,42 +297,91 @@
 }
 
 @media screen and (max-width: 769px) {
-    
- .post{
-    width: 100%;
-    height: 120vh;
- }
 
- /* .profile-line-1{
+    .header {
+        width: 100%;
+        padding: 0 30px;
+        margin-left: 0;
+    }
+
+    .post {
+        width: 100%;
+        height: 120vh;
+    }
+
+    /* .profile-line-1{
     
 } */
- 
- .person-name{
-    color: #FFF;
-    font-family: Montserrat;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    letter-spacing: 2px;
-    justify-content: space-around;
-}
 
-.Contribute{
-    color: #FFF;
-    font-family: Montserrat;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    width: 20%;
-    height: 4vh;
-    flex-shrink: 0;
-    border-radius: 15px;
-    background: #CB8700;
-    text-align: center;
-    margin-left: 50px;
-    cursor: pointer;
-}
+    .circle-1 {
+        width: 40px;
+        height: 40px;
+    }
+
+    .floating-button {
+        position: absolute;
+        right: 10px;
+        bottom: 10px;
+    }
+
+    .post-name {
+        margin-top: 5px;
+    }
+
+    .profile-line {
+        gap: 20px;
+    }
+
+    .two {
+        flex-direction: column;
+    }
+
+    .post-view {
+        width: 100%;
+        border: none;
+    }
+
+    .post-image {
+        height: 250px;
+        width: 100%;
+        /* background-size: contain; */
+    }
+
+    .comment {
+        word-wrap: break-word;
+        width: 220px;
+    }
+
+    .add-post {
+        display: none;
+    }
+
+    .person-name {
+        color: #FFF;
+        font-family: Montserrat;
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: 2px;
+        justify-content: space-around;
+    }
+
+    .Contribute {
+        color: #FFF;
+        font-family: Montserrat;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        padding: 0 50px;
+        /* height: 4vh; */
+        flex-shrink: 0;
+        border-radius: 15px;
+        background: #CB8700;
+        text-align: center;
+        margin-left: 0;
+        cursor: pointer;
+    }
 
 }
