--- a/ninjafood/assects/css/upload.css
+++ b/ninjafood/assects/css/upload.css
@@ -8,6 +8,7 @@
     width: 100%;
     height: 100vh;
     background-color:  #181818;
+    overflow: hidden;
 }
 
 .header-report{
@@ -51,6 +52,7 @@
 
 .holder{
     display: flex;
+    justify-content: space-between;
 }
 
 .profile{
@@ -70,7 +72,10 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-left: 50px;
+    /* margin-left: 50px; */
+    display: flex;
+    gap: 20px;
+    align-items: center;
 }
 
 .login{
@@ -101,8 +106,7 @@
     width: 90%;
     height: 40vh;
     margin: auto;
-    margin-top: 20px;
-    margin-left: 90px;
+    margin-top: 40px;
     padding: 10px;
     color: #FFF;
     color: #B6B6B6;
@@ -132,7 +136,38 @@
     background-size: cover;
     border-radius: 100px;
     border: 2px solid #B6B6B6;
-    margin-left: 550px;
-    margin-top: 20px;
+    margin: 20px auto;
 }
 
+#report {
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (max-width: 769px) {
+
+    .text-area {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .login {
+        margin-left: 0;
+        text-align: right;
+    }
+
+    .holder {
+        justify-content: space-between;
+    }
+
+    .attach {
+        margin-left: 0;
+        margin: 0 auto;
+    }
+
+    /* #report {
+        width: 100%;
+        height: 280px;
+    } */
+
+}
